.collapse-show fix

--- a/less/theme-helpers.less
+++ b/less/theme-helpers.less
@@ -218,10 +218,10 @@ p.date {
 }
 .collapsed {
     .collapsed-show {
-        display: inline-block
+        display: inline-block !important;
     }
     .collapsed-hide {
-        display: none !important;
+        display: none;
     }
 }
 
